; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_aes.c_AESIVGet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_aes.c_AESIVGet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AES_BASE = common dso_local global i64 0, align 8
@AES_O_IV_IN_0 = common dso_local global i64 0, align 8
@AES_O_IV_IN_1 = common dso_local global i64 0, align 8
@AES_O_IV_IN_2 = common dso_local global i64 0, align 8
@AES_O_IV_IN_3 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AESIVGet(i64 %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @AES_BASE, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @AES_O_IV_IN_0, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i64 @HWREG(i64 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = bitcast i32* %15 to i64*
  store i64 %13, i64* %16, align 8
  %17 = load i64, i64* %3, align 8
  %18 = load i64, i64* @AES_O_IV_IN_1, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i64 @HWREG(i64 %19)
  %21 = load i32*, i32** %4, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  %23 = bitcast i32* %22 to i64*
  store i64 %20, i64* %23, align 8
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* @AES_O_IV_IN_2, align 8
  %26 = add nsw i64 %24, %25
  %27 = call i64 @HWREG(i64 %26)
  %28 = load i32*, i32** %4, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 8
  %30 = bitcast i32* %29 to i64*
  store i64 %27, i64* %30, align 8
  %31 = load i64, i64* %3, align 8
  %32 = load i64, i64* @AES_O_IV_IN_3, align 8
  %33 = add nsw i64 %31, %32
  %34 = call i64 @HWREG(i64 %33)
  %35 = load i32*, i32** %4, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 12
  %37 = bitcast i32* %36 to i64*
  store i64 %34, i64* %37, align 8
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @HWREG(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
